<resources>
    <string name="app_name">CnO Go</string>
    <string name="choose_character">Choose a Character</string>
    <string name="button_details">Details</string>
    <string name="button_select_character">Select Character</string>
    <string name="clyde">Clyde</string>
    <string name="owen">Owen</string>
    <string name="abilities_title">Character abilities</string>
    <string name="ability_1">Ability 1</string>
    <string name="ability_2">Ability 2</string>
    <string name="ability_3">Ability 3</string>
    <string name="vs">VS</string>
    <string name="button_play">Play</string>
    <string name="title_victory">Victory</string>
    <string name="title_defeat">Defeat</string>
    <string name="button_play_again">Play again</string>
    <string name="button_opponent_select">Opponent select</string>
    <string name="button_character_select">Character select</string>
    <string name="stats">Stats</string>
    <string name="return_back">Return</string>
    <string name="victory">Victory</string>
    <string name="defeat">Defeat</string>
    <string name="used">\u0020used\u0020</string>
    <string name="dashes">\u0020\u0020---\u0020\u0020</string>
    <string name="period">.\u0020\u0020</string>
    <string name="takes">\u0020takes\u0020</string>
    <string name="damage">\u0020damage.</string>
    <string name="missed">\u0020but missed horribly.</string>
    <string name="defenses_up">\'s defenses are up.</string>
    <string name="player_ability_three_disappointment">Nothing happened!  What a disappointment.</string>
    <string name="opponent_ability_three_disappointment">Nothing happened!  What a relief.</string>
    <string name="glare">Glare</string>
    <string name="ignore">Ignore</string>
    <string name="passive_indifference">Passive Indifference</string>
    <string name="bad_jokes">Bad Jokes</string>
    <string name="friendly_smile">Friendly Smile</string>
    <string name="punishment">PUNishment</string>
    <string name="super_strength">Super Strength</string>
    <string name="super_flight">Super Flight</string>
    <string name="super_yeast">Super Yeast</string>
    <string name="poke_with_a_stick">Poke with a Stick</string>
    <string name="hide_behind_clipboard">Hide behind Clipboard</string>
    <string name="scientific_lecture">Scientific Lecture</string>
    <string name="scythe">Scythe</string>
    <string name="empty_cloak">Empty Cloak</string>
    <string name="immortality">Immortality</string>
    <string name="the_power">The Power!</string>
    <string name="pause">Pause</string>
    <string name="rewind">Rewind</string>
    <string name="scheme">Scheme</string>
    <string name="impersonate">Impersonate</string>
    <string name="clone_o_max">Clone-O-Max 5000</string>
    <string name="awkwardness">Awkwardness</string>
    <string name="sofa_cushion">Sofa Cushion</string>
    <string name="forgotten_about">Forgotten About</string>
    <string name="hairball">Hairball</string>
    <string name="superiority">Superiority</string>
    <string name="judging_stare">Judging Stare</string>
</resources>
